// Vitest Snapshot v1

exports[`XCM > Acala handles downward messages 1`] = `
[
  {
    "event": {
      "data": {
        "dispatchInfo": {
          "class": "Mandatory",
          "paysFee": "Yes",
          "weight": "158,080,000",
        },
      },
      "index": "0x0000",
      "method": "ExtrinsicSuccess",
      "section": "system",
    },
    "phase": {
      "ApplyExtrinsic": "0",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "count": "1",
      },
      "index": "0x1e04",
      "method": "DownwardMessagesReceived",
      "section": "parachainSystem",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "246,129,953,122",
        "currencyId": {
          "Token": "DOT",
        },
        "who": "25EPNyxpdqMUeVj9WndwUYVKkfFkMLroo2fg9V1MA79PJ6iE",
      },
      "index": "0x0b0a",
      "method": "Deposited",
      "section": "tokens",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "account": "25EPNyxpdqMUeVj9WndwUYVKkfFkMLroo2fg9V1MA79PJ6iE",
      },
      "index": "0x0003",
      "method": "NewAccount",
      "section": "system",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "246,129,953,122",
        "currencyId": {
          "Token": "DOT",
        },
        "who": "25EPNyxpdqMUeVj9WndwUYVKkfFkMLroo2fg9V1MA79PJ6iE",
      },
      "index": "0x0b00",
      "method": "Endowed",
      "section": "tokens",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "2,771,999",
        "currencyId": {
          "Token": "DOT",
        },
        "who": "23M5ttkmR6KcoTAAE6gcmibnKFtVaTP5yxnY8HF1BmrJ2A1i",
      },
      "index": "0x0b0a",
      "method": "Deposited",
      "section": "tokens",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "messageId": "0xa004205cd3559f06413e92aa4bd5a0f4a12eea722da2bf27c52447f69fa7b660",
        "outcome": {
          "Complete": "800,000,000",
        },
      },
      "index": "0x3502",
      "method": "ExecutedDownward",
      "section": "dmpQueue",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "dmqHead": "0x43bc1b7d0a62cc18a3ac5218f8076cfce521669761c7cc68761a4094167ab974",
        "weightUsed": "800,000,000",
      },
      "index": "0x1e05",
      "method": "DownwardMessagesProcessed",
      "section": "parachainSystem",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "dispatchInfo": {
          "class": "Mandatory",
          "paysFee": "Yes",
          "weight": "0",
        },
      },
      "index": "0x0000",
      "method": "ExtrinsicSuccess",
      "section": "system",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
]
`;

exports[`XCM > Acala handles horizonal messages 1`] = `
[
  {
    "event": {
      "data": {
        "dispatchInfo": {
          "class": "Mandatory",
          "paysFee": "Yes",
          "weight": "158,080,000",
        },
      },
      "index": "0x0000",
      "method": "ExtrinsicSuccess",
      "section": "system",
    },
    "phase": {
      "ApplyExtrinsic": "0",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "9,111,469,011,754,434",
        "currencyId": {
          "Token": "AUSD",
        },
        "who": "23UvQ3ZQXJ5LfTUSYkcRPkQX2FHgcKxGmqdxYJe9j5e3Lwsi",
      },
      "index": "0x0b08",
      "method": "Withdrawn",
      "section": "tokens",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "9,111,466,917,717,450",
        "currencyId": {
          "Token": "AUSD",
        },
        "who": "2561WgnRM2Nbec2WseHxVdpeW19YYHh7RM5gRWQV7zwwwgXQ",
      },
      "index": "0x0b0a",
      "method": "Deposited",
      "section": "tokens",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "account": "2561WgnRM2Nbec2WseHxVdpeW19YYHh7RM5gRWQV7zwwwgXQ",
      },
      "index": "0x0003",
      "method": "NewAccount",
      "section": "system",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "9,111,466,917,717,450",
        "currencyId": {
          "Token": "AUSD",
        },
        "who": "2561WgnRM2Nbec2WseHxVdpeW19YYHh7RM5gRWQV7zwwwgXQ",
      },
      "index": "0x0b00",
      "method": "Endowed",
      "section": "tokens",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "2,094,036,984",
        "currencyId": {
          "Token": "AUSD",
        },
        "who": "23M5ttkmR6KcoTAAE6gcmibnKFtVaTP5yxnY8HF1BmrJ2A1i",
      },
      "index": "0x0b0a",
      "method": "Deposited",
      "section": "tokens",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "messageHash": "0x09e1b5b4cd5b9ab2cb31449175dc5504e4314db308d38de8dfd8d6529e481b79",
        "weight": "800,000,000",
      },
      "index": "0x3200",
      "method": "Success",
      "section": "xcmpQueue",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "dispatchInfo": {
          "class": "Mandatory",
          "paysFee": "Yes",
          "weight": "0",
        },
      },
      "index": "0x0000",
      "method": "ExtrinsicSuccess",
      "section": "system",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
]
`;

exports[`XCM > Polkadot send downward messages to Acala 1`] = `
[
  {
    "event": {
      "data": {
        "dispatchInfo": {
          "class": "Mandatory",
          "paysFee": "Yes",
          "weight": "218,918,000",
        },
      },
      "index": "0x0000",
      "method": "ExtrinsicSuccess",
      "section": "system",
    },
    "phase": {
      "ApplyExtrinsic": "0",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "dispatchInfo": {
          "class": "Mandatory",
          "paysFee": "Yes",
          "weight": "85,212,000",
        },
      },
      "index": "0x0000",
      "method": "ExtrinsicSuccess",
      "section": "system",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "184,908,979",
        "who": "146SvjUZXoMaemdeiecyxgALeYMm8ZWh1yrGo8RtpoPfe7WL",
      },
      "index": "0x0508",
      "method": "Withdraw",
      "section": "balances",
    },
    "phase": {
      "ApplyExtrinsic": "2",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "1,000,000,000,000",
        "from": "146SvjUZXoMaemdeiecyxgALeYMm8ZWh1yrGo8RtpoPfe7WL",
        "to": "13YMK2eYoAvStnzReuxBjMrAvPXmmdsURwZvc62PrdXimbNy",
      },
      "index": "0x0502",
      "method": "Transfer",
      "section": "balances",
    },
    "phase": {
      "ApplyExtrinsic": "2",
    },
    "topics": [],
  },
  {
    "event": {
      "data": [
        {
          "Complete": "1,000,000,000",
        },
      ],
      "index": "0x6300",
      "method": "Attempted",
      "section": "xcmPallet",
    },
    "phase": {
      "ApplyExtrinsic": "2",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "147,927,183",
        "who": "13UVJyLnbVp9RBZYFwFGyDvVd1y27Tt8tkntv6Q7JVPhFsTB",
      },
      "index": "0x0507",
      "method": "Deposit",
      "section": "balances",
    },
    "phase": {
      "ApplyExtrinsic": "2",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "value": "147,927,183",
      },
      "index": "0x1306",
      "method": "Deposit",
      "section": "treasury",
    },
    "phase": {
      "ApplyExtrinsic": "2",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "36,981,796",
        "who": "12HFymxpDmi4XXPHaEMp74CNpRhkqwG5qxnrgikkhon1XMrj",
      },
      "index": "0x0507",
      "method": "Deposit",
      "section": "balances",
    },
    "phase": {
      "ApplyExtrinsic": "2",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "actualFee": "184,908,979",
        "tip": "0",
        "who": "146SvjUZXoMaemdeiecyxgALeYMm8ZWh1yrGo8RtpoPfe7WL",
      },
      "index": "0x2000",
      "method": "TransactionFeePaid",
      "section": "transactionPayment",
    },
    "phase": {
      "ApplyExtrinsic": "2",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "dispatchInfo": {
          "class": "Normal",
          "paysFee": "Yes",
          "weight": "1,185,212,000",
        },
      },
      "index": "0x0000",
      "method": "ExtrinsicSuccess",
      "section": "system",
    },
    "phase": {
      "ApplyExtrinsic": "2",
    },
    "topics": [],
  },
]
`;

exports[`XCM > Polkadot send downward messages to Acala 2`] = `
[
  {
    "event": {
      "data": {
        "dispatchInfo": {
          "class": "Mandatory",
          "paysFee": "Yes",
          "weight": "158,080,000",
        },
      },
      "index": "0x0000",
      "method": "ExtrinsicSuccess",
      "section": "system",
    },
    "phase": {
      "ApplyExtrinsic": "0",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "count": "2",
      },
      "index": "0x1e04",
      "method": "DownwardMessagesReceived",
      "section": "parachainSystem",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "235,975,337,226",
        "currencyId": {
          "Token": "DOT",
        },
        "who": "23e3iqWXzeCN5H3aJzDmqk2bz1mZ9pRG94PM1NJdfBaMj6ZR",
      },
      "index": "0x0b0a",
      "method": "Deposited",
      "section": "tokens",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "235,975,337,226",
        "currencyId": {
          "Token": "DOT",
        },
        "who": "23e3iqWXzeCN5H3aJzDmqk2bz1mZ9pRG94PM1NJdfBaMj6ZR",
      },
      "index": "0x0b00",
      "method": "Endowed",
      "section": "tokens",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "2,771,999",
        "currencyId": {
          "Token": "DOT",
        },
        "who": "23M5ttkmR6KcoTAAE6gcmibnKFtVaTP5yxnY8HF1BmrJ2A1i",
      },
      "index": "0x0b0a",
      "method": "Deposited",
      "section": "tokens",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "messageId": "0x8088b1e1a4d66511b52e8a8f6155e42241ea1818151625a924852c814d9aa265",
        "outcome": {
          "Complete": "800,000,000",
        },
      },
      "index": "0x3502",
      "method": "ExecutedDownward",
      "section": "dmpQueue",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "999,997,228,001",
        "currencyId": {
          "Token": "DOT",
        },
        "who": "23y3WetbNi6rDMgHmyRDjgpb7PnhgPotuPPawxruTMLYTLzG",
      },
      "index": "0x0b0a",
      "method": "Deposited",
      "section": "tokens",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "account": "23y3WetbNi6rDMgHmyRDjgpb7PnhgPotuPPawxruTMLYTLzG",
      },
      "index": "0x0003",
      "method": "NewAccount",
      "section": "system",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "999,997,228,001",
        "currencyId": {
          "Token": "DOT",
        },
        "who": "23y3WetbNi6rDMgHmyRDjgpb7PnhgPotuPPawxruTMLYTLzG",
      },
      "index": "0x0b00",
      "method": "Endowed",
      "section": "tokens",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "amount": "2,771,999",
        "currencyId": {
          "Token": "DOT",
        },
        "who": "23M5ttkmR6KcoTAAE6gcmibnKFtVaTP5yxnY8HF1BmrJ2A1i",
      },
      "index": "0x0b0a",
      "method": "Deposited",
      "section": "tokens",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "messageId": "0xc4dd612e0a23c9e0d3c677adbfb3bca299caa4c37c2085baa5d7a33736d19e80",
        "outcome": {
          "Complete": "800,000,000",
        },
      },
      "index": "0x3502",
      "method": "ExecutedDownward",
      "section": "dmpQueue",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "dmqHead": "0xd6308f1fd114709106d34c2cecce1bdd2fd9fec73898e25ccd5c62f84a96f8bd",
        "weightUsed": "1,600,000,000",
      },
      "index": "0x1e05",
      "method": "DownwardMessagesProcessed",
      "section": "parachainSystem",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
  {
    "event": {
      "data": {
        "dispatchInfo": {
          "class": "Mandatory",
          "paysFee": "Yes",
          "weight": "0",
        },
      },
      "index": "0x0000",
      "method": "ExtrinsicSuccess",
      "section": "system",
    },
    "phase": {
      "ApplyExtrinsic": "1",
    },
    "topics": [],
  },
]
`;
